-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 23, 24
-
Component/s: hotspot
-
b21
-
s390x
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8345539 | 23.0.2 | Amit Kumar | P4 | Closed | Won't Fix | |
| JDK-8345227 | 21.0.6 | Amit Kumar | P4 | Resolved | Fixed | b06 |
- backported by
-
JDK-8345227 [s390x] C1 unwind_handler fails to unlock synchronized methods with LM_MONITOR
-
- Resolved
-
-
JDK-8345539 [s390x] C1 unwind_handler fails to unlock synchronized methods with LM_MONITOR
-
- Closed
-
- clones
-
JDK-8341862 PPC64: C1 unwind_handler fails to unlock synchronized methods with LM_MONITOR
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk21u-dev/a803b5a0
-
Commit(master)
openjdk/jdk23u/1d258ba6
-
Commit(master)
openjdk/jdk/9201e9fc
-
Review(master)
openjdk/jdk21u-dev/1184
-
Review(master)
openjdk/jdk23u/229
-
Review(master)
openjdk/jdk/21557