8342409: [s390x] C1 unwind_handler fails to unlock synchronized methods with LM_MONITOR

Backport-of: 9201e9fcc28cff37cf9996e8db38f9aee7511b1c